# docs/swagger.json
@@ -15,6 +15,215 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/article": {
+            "get": {
+                "description": "Возвращает статью по id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blog"
+                ],
+                "summary": "Получить статью",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID статью",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "успех",
+                        "schema": {
+                            "$ref": "#/definitions/productsRPC.Article"
+                        }
+                    },
+                    "502": {
+                        "description": "ошибка в микросервисе",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGError"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Обновляет информацию о статье по ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blog"
+                ],
+                "summary": "Обновить статью",
+                "parameters": [
+                    {
+                        "description": "Данные статьи",
+                        "name": "article",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/productsRPC.Article"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "успех",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGMessage"
+                        }
+                    },
+                    "400": {
+                        "description": "неправильный ввод",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGError"
+                        }
+                    },
+                    "404": {
+                        "description": "не найдено",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGError"
+                        }
+                    },
+                    "502": {
+                        "description": "ошибка в микросервисе",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Добавляет новую статью. Id и CreationTime создаются автоматически. Можно передавать значения по умолчанию",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blog"
+                ],
+                "summary": "Создать новую статью",
+                "parameters": [
+                    {
+                        "description": "Данные новой статьи",
+                        "name": "article",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/productsRPC.Article"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "успех",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGId"
+                        }
+                    },
+                    "400": {
+                        "description": "неправильный ввод",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGError"
+                        }
+                    },
+                    "409": {
+                        "description": "уже существует",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGError"
+                        }
+                    },
+                    "502": {
+                        "description": "ошибка в микросервисе",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Удаляет статью по ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blog"
+                ],
+                "summary": "Удалить статью",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID статью",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "успех",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGMessage"
+                        }
+                    },
+                    "400": {
+                        "description": "неправильный ввод",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGError"
+                        }
+                    },
+                    "404": {
+                        "description": "не найдено",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGError"
+                        }
+                    },
+                    "502": {
+                        "description": "ошибка в микросервисе",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/article/all": {
+            "get": {
+                "description": "Возвращает список статей",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blog"
+                ],
+                "summary": "Получить все статьи",
+                "responses": {
+                    "200": {
+                        "description": "успех",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/productsRPC.Article"
+                            }
+                        }
+                    },
+                    "502": {
+                        "description": "ошибка в микросервисе",
+                        "schema": {
+                            "$ref": "#/definitions/views.SWGError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/auth/check": {
             "get": {
                 "description": "проверяет пароль из cookie",
@@ -1763,6 +1972,20 @@
                         "name": "prompt",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "start \u003e 0",
+                        "name": "start",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "end",
+                        "name": "end",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -2001,6 +2224,26 @@
         }
     },
     "definitions": {
+        "productsRPC.Article": {
+            "type": "object",
+            "properties": {
+                "creationTime": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "img": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "productsRPC.Brand": {
             "type": "object",
             "properties": {
@@ -2160,6 +2403,9 @@
                 "id": {
                     "type": "string"
                 },
+                "is_favorite": {
+                    "type": "boolean"
+                },
                 "materials": {
                     "type": "array",
                     "items": {
@@ -2183,6 +2429,9 @@
                 },
                 "title": {
                     "type": "string"
+                },
+                "views": {
+                    "type": "integer"
                 },
                 "width": {
                     "type": "integer"
@@ -2321,6 +2570,9 @@
                 "id": {
                     "type": "string"
                 },
+                "is_favorite": {
+                    "type": "boolean"
+                },
                 "materials": {
                     "type": "array",
                     "items": {
@@ -2344,6 +2596,9 @@
                 },
                 "title": {
                     "type": "string"
+                },
+                "views": {
+                    "type": "integer"
                 },
                 "width": {
                     "type": "integer"
